# LifeGen

./: Cargo.toml  Makefile  README.md  index.html  index.js  style.css
shaders/: frag_shader.glsl  vert_shader.glsl
src/: glhandler.rs  lib.rs  webgl.rs
