[package]
name = "lifegen"
version = "0.1.0"
authors = ["Aditya Suresh <ethanaditya@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"

[dependencies.console_error_panic_hook]
version = "0.1.1"
optional = true


[dependencies.web-sys]
version = "0.3.51"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlVertexArrayObject',
  'Window',
  'XmlHttpRequest'
]
